k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mecanica-os-api-deployment
  namespace: mecanica-os
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mecanica-os-api
  template:
    metadata:
      labels:
        app: mecanica-os-api
    spec:
      containers:
        - name: mecanica-os-api
          image: <ECR_REPOSITORY_URL>:<IMAGE_TAG>
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
